# happymeal

./: .gitignore  README.md
image-optimizer/: main.js  package-lock.json  package.json
model/: .cursorrules  answer.py  main.py  pyproject.toml  requirements.txt
utils/: random-pick.py
