[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["ricepotato <ricepotato40@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.18.0"
scikit-learn = "^1.6.1"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
